--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-django==2.1
+certifi==2018.10.15
+chardet==3.0.4
+Django==2.1
 django-cors-headers==2.4.0
 djangorestframework==3.9.0
-requests
-jwt
+idna==2.7
+pytz==2018.7
+requests==2.20.0
+urllib3==1.24
+whitenoise==4.1.2
