--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,105 @@
-Django>=2.1.2
+apturl==0.5.2
+asn1crypto==0.24.0
+beautifulsoup4==4.4.1
+blinker==1.3
+Brlapi==0.6.4
+bs4==0.0.1
+certifi==2018.10.15
+cffi==1.11.5
+chardet==3.0.4
+checkbox-support==0.22
+chrome-gnome-shell==0.0.0
+click==6.2
+colorama==0.3.7
+command-not-found==0.3
+cryptography==2.4.1
+decorator==4.3.0
+defer==1.0.6
+Django==2.1.3
 django-cors-headers==2.4.0
 djangorestframework==3.9.0
-requests==2.20.0
-jwt
+env==0.1.0
+feedparser==5.1.3
+guacamole==0.9.2
+html5lib==0.999
+httplib2==0.9.1
+hupper==1.3
+idna==2.6
+Jinja2==2.8
+jwt==0.5.4
+language-selector==0.1
+livereload==2.4.0
+louis==2.6.4
+lxml==3.5.0
+Mako==1.0.3
+Markdown==2.6.6
+MarkupSafe==0.23
+mkdocs==0.14.0
+oauthlib==1.0.3
+onboard==1.2.0
+padme==1.1.1
+PasteDeploy==1.5.2
+pbr==5.1.1
+pexpect==4.0.1
+Pillow==3.1.2
+plainbox==0.25
+plaster==1.0
+plaster-pastedeploy==0.6
+ptyprocess==0.5
+pyasn1==0.1.9
+PyContracts==1.8.3
+pycparser==2.19
+pycups==1.9.73
+pycurl==7.43.0
+Pygments==2.1
+pygobject==3.20.0
+pyinotify==0.9.6
+PyJWT==1.3.0
+pyparsing==2.0.3
+pyramid==1.9.2
+pyramid-jinja2==2.7
+python-apt==1.1.0b1+ubuntu0.16.4.1
+python-dateutil==2.4.2
+python-debian==0.1.27
+python-systemd==231
+pytz==2018.7
+pyxdg==0.25
+PyYAML==3.11
+reportlab==3.3.0
+repoze.lru==0.7
+requests==2.18.4
+sessioninstaller==0.0.0
+six==1.10.0
+SQLAlchemy==1.2.8
+stevedore==1.30.0
+system-service==0.3
+tornado==4.2.1
+translationstring==1.3
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+unattended-upgrades==0.1
+unity-scope-calculator==0.1
+unity-scope-chromiumbookmarks==0.1
+unity-scope-colourlovers==0.1
+unity-scope-devhelp==0.1
+unity-scope-firefoxbookmarks==0.1
+unity-scope-gdrive==0.7
+unity-scope-manpages==0.1
+unity-scope-openclipart==0.1
+unity-scope-texdoc==0.1
+unity-scope-tomboy==0.1
+unity-scope-virtualbox==0.1
+unity-scope-yelp==0.1
+unity-scope-zotero==0.1
+urllib3==1.22
+usb-creator==0.3.0
+venusian==1.1.0
+virtualenv==15.0.1
+virtualenv-clone==0.4.0
+virtualenvwrapper==4.8.2
+WebOb==1.8.2
+xdiagnose==3.8.4.1
+xkit==0.0.0
+XlsxWriter==0.7.3
+zope.deprecation==4.3.0
+zope.interface==4.5.0
